Fixed spacing

--- a/frontend/src/styles/Navbar.css
+++ b/frontend/src/styles/Navbar.css
@@ -21,15 +21,13 @@ body {
 /* Logo Section */
 .nav-logo {
   display: flex;
-  align-items: center;
-  gap: 10px; 
+  align-items: center;  
 }
 
 .nav-logo img {
-  height: 40px;
+  height: 50px;
   width: auto;  
-  margin-left: 20px;
-  margin-right: 10px;
+  margin-left: 80px;  
 }
 
 .logo-text {
